--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Blog/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Blog/_CreateOrUpdate.Info.cshtml
@@ -58,6 +58,15 @@
             </div>
             <div class="form-group">
                 <div class="col-md-3">
+                    <nop-label asp-for="IncludeInSitemap" />
+                </div>
+                <div class="col-md-9">
+                    <nop-editor asp-for="IncludeInSitemap" />
+                    <span asp-validation-for="IncludeInSitemap"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-3">
                     <nop-label asp-for="Title" />
                 </div>
                 <div class="col-md-9">
