--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Setting/GeneralCommon.cshtml
@@ -30,11 +30,22 @@
         });
 
         function toggleSitemapSettings() {
+            var containers = [
+                $("#pnlSitemapPageSize"),
+                $("#pnlSitemapIncludeCategories"),
+                $("#pnlSitemapIncludeManufacturers"),
+                $("#pnlSitemapIncludeProducts"),
+                $("#pnlSitemapIncludeProductTags"),
+                $("#pnlSitemapIncludeTopics"),
+                $("#pnlSitemapIncludeBlogPosts")
+            ];
             if ($('#@Html.IdFor(model => model.StoreInformationSettings.SitemapEnabled)').is(':checked')) {
-                $("#pnlSitemapPageSize, #pnlSitemapIncludeCategories, #pnlSitemapIncludeManufacturers, #pnlSitemapIncludeProducts, #pnlSitemapIncludeProductTags").show();
+                for (var i = 0; i < containers.length; ++i)
+                    containers[i].show();
             }
             else {
-                $("#pnlSitemapPageSize, #pnlSitemapIncludeCategories, #pnlSitemapIncludeManufacturers, #pnlSitemapIncludeProducts, #pnlSitemapIncludeProductTags").hide();
+                for (var j = 0; j < containers.length; ++j)
+                    containers[j].hide();
             }
         }
 
@@ -506,6 +517,26 @@
                                 <div class="col-md-9">
                                     <nop-editor asp-for="StoreInformationSettings.SitemapIncludeProductTags" />
                                     <span asp-validation-for="StoreInformationSettings.SitemapIncludeProductTags"></span>
+                                </div>
+                            </div>
+                            <div class="form-group advanced-setting" id="pnlSitemapIncludeTopics">
+                                <div class="col-md-3">
+                                    <nop-override-store-checkbox asp-for="StoreInformationSettings.SitemapIncludeTopics_OverrideForStore" asp-input="StoreInformationSettings.SitemapIncludeTopics" asp-store-scope="@Model.ActiveStoreScopeConfiguration" />
+                                    <nop-label asp-for="StoreInformationSettings.SitemapIncludeTopics" />
+                                </div>
+                                <div class="col-md-9">
+                                    <nop-editor asp-for="StoreInformationSettings.SitemapIncludeTopics" />
+                                    <span asp-validation-for="StoreInformationSettings.SitemapIncludeTopics"></span>
+                                </div>
+                            </div>
+                            <div class="form-group advanced-setting" id="pnlSitemapIncludeBlogPosts">
+                                <div class="col-md-3">
+                                    <nop-override-store-checkbox asp-for="StoreInformationSettings.SitemapIncludeBlogPosts_OverrideForStore" asp-input="StoreInformationSettings.SitemapIncludeBlogPosts" asp-store-scope="@Model.ActiveStoreScopeConfiguration" />
+                                    <nop-label asp-for="StoreInformationSettings.SitemapIncludeBlogPosts" />
+                                </div>
+                                <div class="col-md-9">
+                                    <nop-editor asp-for="StoreInformationSettings.SitemapIncludeBlogPosts" />
+                                    <span asp-validation-for="StoreInformationSettings.SitemapIncludeBlogPosts"></span>
                                 </div>
                             </div>
                         </nop-nested-setting>
