--- a/src/Presentation/Nop.Web/Areas/Admin/Views/ActivityLog/_List.LogTypes.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/ActivityLog/_List.LogTypes.cshtml
@@ -44,7 +44,7 @@
                             $(document).ready(function () {
                                 $('#activityLogType-grid').DataTable({
                                     data: activityLogTypes,
-                                    @await Html.PartialAsync("_GridLocalization"),
+                                    language: @await Html.PartialAsync("_GridLocalization"),
                                     paging: false,
                                     //dom: '<"top">rt<"bottom"flp><"clear">',
                                     columnDefs: [
@@ -56,11 +56,13 @@
                                     columns: [
                                         {
                                             data: 'Name',
-                                            title: "@T("Admin.Configuration.ActivityLog.ActivityLogType.Fields.Name")"
+                                            title: "@T("Admin.Configuration.ActivityLog.ActivityLogType.Fields.Name")",
+                                            autoWidth: true
                                         },
                                         {
                                             data: 'Enabled',
                                             title: "<div class='checkbox'><label><input id='mastercheckbox' type='checkbox'/>@T("Admin.Configuration.ActivityLog.ActivityLogType.Fields.Enabled")</label></div>",
+                                            width: 100,
                                             render: function (data, type, row) {
                                                 return (data == true) ? "<input name='checkbox_activity_types' value='" + row.Id + "' type='checkbox' class='checkboxGroups' checked='checked'/>"
                                                      : "<input name='checkbox_activity_types' value='" + row.Id + "' type='checkbox' class='checkboxGroups'/>";
