--- a/src/Presentation/Nop.Web/Views/Checkout/OpcBillingAddress.cshtml
+++ b/src/Presentation/Nop.Web/Views/Checkout/OpcBillingAddress.cshtml
@@ -1,11 +1,16 @@
-﻿@model CheckoutBillingAddressModel
+﻿@using Nop.Core.Domain.Catalog
+@model CheckoutBillingAddressModel
+
+@{
+    Html.AppendScriptParts(ResourceLocation.Footer, "~/lib/jquery-tmpl/jquery.tmpl.min.js");
+}
 <div class="checkout-data">
     @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.OpCheckoutBillingAddressTop })
     @if (Model.ShipToSameAddressAllowed)
     {
         <div class="section ship-to-same-address">
             <p class="selector">
-                <input asp-for="ShipToSameAddress"/>
+                <input asp-for="ShipToSameAddress" />
                 <label asp-for="ShipToSameAddress">@T("Checkout.ShipToSameAddress")</label>
             </p>
         </div>
@@ -53,6 +58,51 @@
                 </select>
             </div>
         </div>
+        <div id="invalid-address-container"></div>
+        <script id="invalid-address-tmpl" type="text/html">
+            <div class="inputs custom-attributes">
+                {{if AttributeControlType == @((int)AttributeControlType.TextBox)}}
+                <label for="address_attribute_${Id}">${Name}:</label>
+                <input type="text" 
+                       data-val="true" 
+                       data-val-required="${Error}" 
+                       id="address_attribute_${Id}" 
+                       name="address_attribute_${Id}" 
+                       value="${Name}"
+                       onchange="(function(event) { console.log(event);})(this)">
+                <span class="field-validation-valid" data-valmsg-for="address_attribute_${Id}" data-valmsg-replace="true"></span>
+                {{/if}}
+
+                {{if AttributeControlType == @((int)AttributeControlType.DropdownList)}}
+                <label>${Name}:</label>
+        
+                <select name="address_attribute_${Id}" id="address_attribute_3" class="valid" aria-invalid="false">
+                    {{each AddressAttributeValues}}
+                    <option value="${Id}">${Name}</option>
+                    {{/each}}
+                </select>
+                {{/if}}
+            </div>
+        </script>
+        <script asp-location="Footer">
+            $(document).ready(function() {
+                $('#billing-address-select').on('change',
+                    function() {
+                        $.ajax({
+                            cache: false,
+                            url: '@Url.Action("OpcCheckCustomAttributes", "Checkout")',
+                            type: 'get',
+                            data: {
+                                billingAddressId: $('#billing-address-select').val()
+                            }
+                        }).done(function (response) {
+                            $('#invalid-address-container').empty();
+                            $('#invalid-address-tmpl').tmpl(JSON.parse(response)).appendTo($('#invalid-address-container'));
+                            console.log($('#address_attribute_1'));
+                        });
+                    });
+            })
+        </script>
     }
     @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.OpCheckoutBillingAddressMiddle })
     <div class="section new-billing-address" id="billing-new-address-form">
